@@ -1,0 +1,12 @@
+#!/usr/bin/env python
+# -*- coding: utf-8 -*-
+# emacs: -*- mode: python; py-indent-offset: 4; indent-tabs-mode: nil -*-
+# vi: set ft=python sts=4 ts=4 sw=4 et:
+#
+# @Author: oesteban - code@oscaresteban.es
+# @Date:   2014-06-02 12:06:07
+# @Last Modified by:   oesteban
+# @Last Modified time: 2014-06-02 12:40:10
+"""Top-level namespace for elastix."""
+
+from registration import Registration
