@@ -1,0 +1,56 @@
+# AUTO-GENERATED by tools/checkspecs.py - DO NOT EDIT
+from nipype.testing import assert_equal
+from nipype.interfaces.elastix.registration import Registration
+
+def test_Registration_inputs():
+    input_map = dict(args=dict(argstr='%s',
+    ),
+    environ=dict(nohash=True,
+    usedefault=True,
+    ),
+    fixed_image=dict(argstr='-f %s',
+    mandatory=True,
+    ),
+    fixed_mask=dict(argstr='-fMask %s',
+    ),
+    ignore_exception=dict(nohash=True,
+    usedefault=True,
+    ),
+    initial_transform=dict(argstr='-t0 %s',
+    ),
+    moving_image=dict(argstr='-m %s',
+    mandatory=True,
+    ),
+    moving_mask=dict(argstr='-mMask %s',
+    ),
+    num_threads=dict(argstr='-threads %01d',
+    ),
+    output_path=dict(argstr='-out %s',
+    mandatory=True,
+    usedefault=True,
+    ),
+    parameters=dict(argstr='-p %s...',
+    mandatory=True,
+    ),
+    terminal_output=dict(mandatory=True,
+    nohash=True,
+    ),
+    )
+    inputs = Registration.input_spec()
+
+    for key, metadata in input_map.items():
+        for metakey, value in metadata.items():
+            yield assert_equal, getattr(inputs.traits()[key], metakey), value
+
+def test_Registration_outputs():
+    output_map = dict(transform=dict(),
+    warped_file=dict(),
+    warped_files=dict(),
+    warped_files_flags=dict(),
+    )
+    outputs = Registration.output_spec()
+
+    for key, metadata in output_map.items():
+        for metakey, value in metadata.items():
+            yield assert_equal, getattr(outputs.traits()[key], metakey), value
+
